--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -30,6 +31,7 @@
     "cors": "^2.8.5",
     "discord.js": "^14.14.1",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2",
     "http": "^0.0.1-security",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
@@ -41,8 +43,10 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/node-fetch": "^2.6.9",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
