--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.0",
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "discord.js": "^14.14.1",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
+    "fs-extra": "^11.2.0",
     "http": "^0.0.1-security",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
