--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^11.2.0",
+    "get-audio-duration": "^4.0.1",
     "http": "^0.0.1-security",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
