--- a/package.json
+++ b/package.json
@@ -21,25 +21,38 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffmpeg/ffmpeg": "^0.12.7",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/event-emitter": "^2.0.3",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/typeorm": "^10.0.1",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "discord.js": "^14.14.1",
     "express": "^4.18.2",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^11.2.0",
     "get-audio-duration": "^4.0.1",
     "http": "^0.0.1-security",
+    "jimp": "^0.22.10",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
+    "range-parser": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "rxjs": "^7.8.1",
-    "sse-express": "^1.0.2"
+    "sse-express": "^1.0.2",
+    "typeorm": "^0.3.17",
+    "video-stitch": "^1.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
