--- a/.env
+++ b/.env
@@ -3,3 +3,10 @@ URL_IMAGE_STABLE=https://stablediffusionapi.com/api/v4/dreambooth
 URL_BACKEND=http://localhost:3001
 API_KEY_ELEVENS=496549d73336ade0cfaabb5991b5fb78
 API_URL_ELEVENS=https://api.elevenlabs.io/v1/text-to-speech/
+
+POSTGRES_PASSWORD=3EDfEe1-34dEE5FaF3GEA5d4fDg-eCFF
+DATABASE_URL=postgresql://postgres:3EDfEe1-34dEE5FaF3GEA5d4fDg-eCFF@monorail.proxy.rlwy.net:26857/railway
+DB_HOST=monorail.proxy.rlwy.net
+DB_PORT=26857
+POSTGRES_USER=postgres
+POSTGRES_DATABASE=railway
